# zhukovgreen-py-template

./: .gitignore  .vim  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: bug.md  feature-proposal.md
{{cookiecutter.project_slug}}/.gitlab/merge_request_templates/: default.md  monthly-maintenance.md
{{cookiecutter.project_slug}}/tests/: test_basic.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  main.py  pkg_utils.py  setup_logger.py
